2023-08-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* sdas/asrab/rab.h,
	  sdas/asrab/rabadr.c,
	  sdas/asrab/rabmch.c:
	  Fix handling of some invalid instructions in Rabbit assembler (bug #3638, patch by by D-mo).

2023-08-26 Philipp Klaus Krause <philipp@colecovision.eu>

	* support/regression/tests/bug-3165.c,
	  support/regression/tests/bug-3167.c:
	  Rename regression test to mach correct bug number.

2023-08-26 Maarten Brock <sourceforge.brock AT dse.nl>

	* device/lib/pic16/libc/string/memchr.c,
	* device/lib/pic16/libc/string/memchrpgm.c,
	* device/lib/pic16/libc/string/memchrram.c: fixed buggy implementations
	* src/pic14/genarith.c(genPlus): fixed warning
	* support/regression/qct/0026-implicitret.c: disable expected warning 278
	* support/regression/tcc/97_utf8_string_literal.c: replaced abort() by
	  return, is this test even linked, let alone run?
	* support/regression/tests/gcc-torture-execute-930106-1.c: very odd test,
	  fixed warnings
	* support/regression/tests/gcc-torture-execute-cmpsf-1.c: enabled for mcs51
	  with correct_results[] const, fixed warnings
	* support/regression/tests/gcc-torture-execute-strct-varg-1.c: enabled for
	  hc08 & s08, fixed warnings
	* support/regression/tests/lonesha256.c: disabled for mcs51-stack-auto
	* support/regression/tests/mm-pnvi-ae-udi-pointer_from_int_disambiguation_2_xy.c:
	  added comment about incorrect warning 127
	* support/regression/tcc/109_float_struct_calling.c,
	* support/regression/tcc/10_pointer.c,
	* support/regression/tcc/11_precedence.c,
	* support/regression/tcc/30_hanoi.c,
	* support/regression/tcc/52_unnamed_enum.c,
	* support/regression/tcc/54_goto.c,
	* support/regression/tcc/55_lshift_type.c,
	* support/regression/tests/gcc-torture-execute-20000717-3.c,
	* support/regression/tests/gcc-torture-execute-20020201-1.c,
	* support/regression/tests/gcc-torture-execute-20020328-1.c,
	* support/regression/tests/gcc-torture-execute-20020819-1.c,